--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,7 @@ header .logo {
   color: var(--hero-title-color);
 }
 
-.hero-btn {
+.button {
   display: block;
   padding: 10px 32px;
   margin: 0 auto;
@@ -258,8 +258,8 @@ header .logo {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn:hover,
-.hero-btn:focus {
+.button:hover,
+.button:focus {
   background-color: #188ce8;
 }
 
@@ -609,6 +609,10 @@ header .logo {
   display: flex;
 }
 
+.footer-content {
+  width: 231px;
+}
+
 .logo-white {
   color: #fff;
 }
@@ -652,7 +656,8 @@ footer .logo {
   align-items: baseline;
 }
 
-.footer-soc strong {
+.footer-soc strong,
+.footer-form-wrap strong {
   display: block;
   margin-bottom: 20px;
 
@@ -702,6 +707,44 @@ footer .logo {
   background-color: var(--accent-color);
 }
 
+.footer-form-wrap {
+  margin-left: 93px;
+  width: 570px;
+}
+
+.footer-form {
+  display: flex;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  padding: 15px;
+
+  background-color: transparent;
+  color: var(--text-color-secondary);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+.footer-input:focus {
+  outline: 1px solid #2196f3;
+}
+
+.subscribe-btn {
+  position: relative;
+
+  display: inline-block;
+  width: 200px;
+  padding: 10px 62px 10px 29px;
+  margin-left: 12px;
+}
+
+.icon-subscribe {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+}
+
 /* -----------------MODAL----------------- */
 .backdrop {
   position: fixed;
@@ -734,7 +777,7 @@ footer .logo {
 
   width: 528px;
   min-height: 581px;
-  padding: 8px;
+  padding: 40px;
 
   background-color: var(--primary-bcg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -746,14 +789,49 @@ footer .logo {
 
 .modal-close-btn {
   display: block;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 
   width: 30px;
   height: 30px;
-  margin-left: auto;
 
   background-color: var(--primary-bcg-color);
+  color: #000;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn > svg {
+  fill: currentColor;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  color: var(--accent-color);
+}
+
+.modal-title {
+  display: block;
+
+  margin: 0 auto 12px auto;
+
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-color);
+}
+
+.modal-form-label {
+  display: block;
+}
+
+.modal-form-text {
+  display: block;
 }
 
 .no-scroll {
