--- a/css/styles.css
+++ b/css/styles.css
@@ -723,8 +723,11 @@ footer .logo {
 
   background-color: transparent;
   color: var(--text-color-secondary);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: none;
+  outline: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
+
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-input:focus {
   outline: 1px solid #2196f3;
@@ -733,7 +736,6 @@ footer .logo {
 .subscribe-btn {
   position: relative;
 
-  display: inline-block;
   width: 200px;
   padding: 10px 62px 10px 29px;
   margin-left: 12px;
