--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,6 @@ ul {
   padding-left: 0;
 }
 
-button {
-  cursor: pointer;
-}
-
 .list {
   list-style: none;
   margin: 0;
@@ -84,6 +80,32 @@ img {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.button {
+  display: block;
+  padding: 10px 32px;
+  margin: 0 auto;
+  border: none;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--text-color-secondary);
+
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #188ce8;
 }
 
 /* -----------------HEADER----------------- */
@@ -236,31 +258,6 @@ header .logo {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--hero-title-color);
-}
-
-.button {
-  display: block;
-  padding: 10px 32px;
-  margin: 0 auto;
-  border: none;
-
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--text-color-secondary);
-
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover,
-.button:focus {
-  background-color: #188ce8;
 }
 
 /* -----------------FEATURES----------------- */
@@ -723,14 +720,14 @@ footer .logo {
 
   background-color: transparent;
   color: var(--text-color-secondary);
-  border: none;
-  outline: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 
-  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-input:focus {
-  outline: 1px solid #2196f3;
+  border: 1px solid #2196f3;
+  outline: none;
 }
 
 .subscribe-btn {
@@ -804,6 +801,7 @@ footer .logo {
   border-radius: 50%;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 
 .modal-close-btn > svg {
@@ -828,12 +826,122 @@ footer .logo {
   color: var(--title-color);
 }
 
-.modal-form-label {
+.modal-label {
+  display: block;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.modal-label span {
+  position: relative;
   display: block;
 }
 
-.modal-form-text {
+.modal-icon {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-label + .modal-label {
+  margin-top: 10px;
+}
+
+.modal-text {
   display: block;
+
+  margin-top: 4px;
+  padding: 11px;
+  padding-left: 42px;
+  width: 100%;
+  height: 40px;
+
+  color: #000;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-text:focus {
+  border: 1px solid #2196f3;
+  outline: none;
+}
+
+.modal-text:focus + .modal-icon {
+  fill: var(--accent-color);
+}
+
+.modal-text::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.textarea {
+  resize: none;
+  min-height: 120px;
+  overflow: auto;
+  padding: 12px 16px;
+}
+
+.policy-label {
+  position: relative;
+
+  display: block;
+
+  margin-top: 20px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+  text-align: center;
+}
+
+.policy-label a {
+  color: var(--accent-color);
+}
+
+.policy-checkbox {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.icon-check {
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  transform: translateY(-50%);
+
+  border: 2px solid var(--title-color);
+  border-radius: 2px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.policy-checkbox:checked + .icon-check {
+  background-color: var(--accent-color);
+  border: none;
 }
 
 .no-scroll {
