--- a/css/styles.css
+++ b/css/styles.css
@@ -896,16 +896,15 @@ footer .logo {
 
   display: block;
 
-  margin-top: 20px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 425px;
+  margin: 20px auto 30px;
+  padding-left: 24px;
 
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .policy-label a {
@@ -941,7 +940,8 @@ footer .logo {
 
 .policy-checkbox:checked + .icon-check {
   background-color: var(--accent-color);
-  border: none;
+  border: 2px solid var(--accent-color);
+  outline: none;
 }
 
 .no-scroll {
